fix: adjust text display for readability

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,6 +56,8 @@ button:active {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  font-weight: 900;
+  text-align: center;
   /* From https://css.glass */
   background: rgba(255, 255, 255, 0.19);
   border-radius: 16px;
@@ -65,14 +67,16 @@ button:active {
   border: 1px solid rgba(255, 255, 255, 0.42);
 }
 
+#message:not(.hit-message) {
+  font-size: 3rem;
+}
+
 /* Menu styles */
 #menu {
   position: absolute;
   z-index: 1000;
   height: 90%;
   width: 90%;
-  font-weight: 900;
-  text-align: center;
 }
 
 #menu > h1,
